--- a/index.html
+++ b/index.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLE</title>
     <link rel="stylesheet" href="./assets/reset.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <table>
         <caption>Trafic Plan</caption>
         <thead>
             <tr>
-                <th>title</th>
-                <th>title</th>
-                <th>title</th>
-                <th>title</th>
-                <th>title</th>
+                <th>Choose your plan</th>
+                <th>
+                    <p>starter</p>
+                    <p>$10</p>
+                    <p>per month</p>
+                </th>
+                <th>
+                    <p>econom</p>
+                    <p>$30</p>
+                    <p>per month</p>
+                </th>
+                <th>
+                    <p>standart</p>
+                    <p>$59</p>
+                    <p>per month</p>
+                </th>
+                <th>
+                    <p>professionl</p>
+                    <p>$99</p>
+                    <p>per month</p>
+                </th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>cell 1</td>
-                <td>cell 2</td>
-                <td>cell 3</td>
-                <td>cell 4</td>
-                <td>cell 5</td>
+                <td>amount of space</td>
+                <td>20GB</td>
+                <td>40GB</td>
+                <td>110GB</td>
+                <td>unlimeted</td>
             </tr>
             <tr>
-                <td>cell 1</td>
-                <td>cell 2</td>
-                <td>cell 3</td>
-                <td>cell 4</td>
-                <td>cell 5</td>
+                <td>bandwidth per month</td>
+                <td>120GB</td>
+                <td>240GB</td>
+                <td>610GB</td>
+                <td>1300GB</td>
             </tr>
             <tr>
-                <td>cell 1</td>
-                <td>cell 2</td>
-                <td>cell 3</td>
-                <td>cell 4</td>
-                <td>cell 5</td>
+                <td>email acc</td>
+                <td>1</td>
+                <td>15</td>
+                <td>60</td>
+                <td>unlimeted</td>
             </tr>
             <tr>
-                <td>cell 1</td>
-                <td>cell 2</td>
-                <td>cell 3</td>
-                <td>cell 4</td>
-                <td>cell 5</td>
+                <td>mySQL databases</td>
+                <td>1</td>
+                <td>15</td>
+                <td>60</td>
+                <td>unlimeted</td>
             </tr>
             <tr>
-                <td>cell 1</td>
-                <td>cell 2</td>
-                <td>cell 3</td>
-                <td>cell 4</td>
-                <td>cell 5</td>
+                <td>25h support</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>yes</td>
+                <td>yes</td>
+            </tr>
+            <tr>
+                <td>support tickets per mont</td>
+                <td>2</td>
+                <td>6</td>
+                <td>14</td>
+                <td>20</td>
             </tr>
         </tbody>
-        <tfooot>
+        <tfoot>
             <tr>
                 <td></td>
                 <td><button>start</button></td>
@@ -65,7 +90,8 @@
                 <td><button>start</button></td>
                 <td><button>start</button></td>
             </tr>
-        </tfooot>
+        </tfoot>
     </table>
 </body>
+
 </html>
